fix 'take actions' card uneven width bug

--- a/source/sass/views/home.scss
+++ b/source/sass/views/home.scss
@@ -89,6 +89,10 @@
       font-weight: bold;
     }
 
+    .card {
+      flex: 1;
+    }
+
     .join-us .btn {
       display: block;
       width: 100%;
